enumcapsulate/tests/expand-macros/into_variant/fail/struct.err.txt
error: Only enums can use this derive
 --> /tests/expand-macros/into_variant/fail/struct.rs:4:12
  |
4 | pub struct Struct {
  |            ^^^^^^
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
